<resources>
    <string name="app_name">Gmail Send - Relative Layout</string>
    <string name="action_settings">Settings</string>
    <string name="uname">From:</string>
    <string name="uname_hint">username</string>
    <string name="subject">Subject:</string>
    <string name="password">Password:</string>
    <string name="password_hint">password</string>
    <string name="subject_hint">Subject</string>
    <string name="to_label">To:</string>
    <string name="to_hint">Receiver</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="send_e_mail">Send e-mail</string>
    <string name="youremail_example_com">youremail@example.com</string>
    <string-array name="spinner_values">
        <item>Spinner 1</item>
        <item>Spinner 2</item>
        <item>Spinner 3</item>
        <item>Spinner 4</item>
    </string-array>
</resources>
